--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;1,600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 html, body {
@@ -8,10 +11,9 @@ html, body {
     background-color: #f5f6f7;
 }
 
-h1 {
+h2 {
     max-width: 940px;
     font-size: 2.5em;
-    font-family: Lato, sans-serif;
     font-weight: 700;
     line-height: 1.1;
     margin: 40px 0;
@@ -26,6 +28,98 @@ h1 {
     text-align: center;
 }
 
+.header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 4rem;
+    height: 95px;
+    background-color: #f5f6f7;
+
+}
+.header nav ul  {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.liNav a {
+    text-decoration: none;
+    color: black;
+    transition: all 0.8s;
+    margin-right: 10px;
+}
+.liNav a:hover {
+    color: white;
+    background-color: rgb(120, 9, 224);
+    border-radius: 5px;
+    padding: 6px 8px 6px 8px;
+    
+}
+.ulNav {
+    display: flex;
+        text-decoration: none;
+
+}
+
+.liNav {
+    list-style: none;
+    margin: 1rem;
+    padding: 0.5rem;
+
+    
+}
+
+.liNav li:hover {
+    background-color: rgb(120, 9, 224);
+    border-radius: 0.4rem;
+
+}
+
+.hero{background-image: url("https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80");
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: 400px;
+color: white;
+}
+
+.hero h1{
+    font-size: 3rem;
+    color: white;
+    text-shadow:  4px 4px 4px black;
+    margin-bottom: 1rem;
+
+}
+.hero-button {
+    background-color: rgb(120, 9, 224);
+    border: 0;
+    padding: 1rem 1.5rem;
+    border-radius: 0.4rem;
+    transition: all 0.6s;
+    color: white;
+}
+.hero-button:hover {
+    transform: scale(1.2);
+}
+
+.hero-button a {
+    color: white;
+    text-decoration: none;
+    font-size: bold;
+}
+.hero-button a:hover {
+    color: black;
+}
 .contenedor-principal{
     min-height: 600px;
     display: flex;
@@ -33,3 +127,56 @@ h1 {
     align-items: center;
     justify-content: center;
 }
+
+
+.footer { 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(235, 235, 235);
+    width: 100%;
+  }
+
+  .iconostodos { 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 22px;
+    text-decoration: none;
+
+  }
+
+  .iconostodos li:hover{
+    background-color: salmon;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+
+  li.icon { 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 22px;
+    text-decoration: none;
+
+
+
+  }
+  .icon { 
+    margin: 2rem 1rem 1rem 1rem;
+    padding: 4px;
+    text-decoration: none;
+
+  }
+  
+
+  .creador {
+    font-size: 1.2re;
+    font-weight: bold;
+    /* justify-content: flex-end; */
+    margin: 30px 30px 18px 5px; 
+  }
+  
