--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,13 @@ color: white;
     justify-content: center;
 }
 
-
+.okey{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .footer { 
     display: flex;
     flex-direction: row;
@@ -162,9 +168,7 @@ color: white;
     margin-right: 22px;
     text-decoration: none;
 
-
-
-  }
+}
   .icon { 
     margin: 2rem 1rem 1rem 1rem;
     padding: 4px;
