--- a/src/hojas-de-estilo/Testimonio.css
+++ b/src/hojas-de-estilo/Testimonio.css
@@ -1,26 +1,36 @@
 .contenedor-testimonio{
-    width: 1170px;
-    height: 368px;
+    width: 340px;
+    height: 700px;
     margin: 10px 10px 50px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #fff;
     box-shadow: 0 3px 13px 1px rgba(0 0 0 / 9%); ;
 }
 
+.anyTravel{
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #000;
+    margin-bottom: 10px;
+}
 .imagen-testimonio {
-    height: 100%;
-    width: auto;
+    width: 340px;
 }
 
 .contenedor-texto-testimonio{
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
     text-align: center;
     padding: 40px;
     font-family: Lato, sans-serif;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.1;
 }
 
 .nombre-testimonio{
@@ -37,5 +47,39 @@
 
 .texto-testimonio{
     font-size: 1.1rem;
-    text-align: justify;
+    text-align: center;
+}
+
+.contador{
+    margin-left: 10px;
+    width: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color:rgb(120, 9, 224);
+    border: 0;
+    padding: 3px 4px;
+    border-radius: 0.4rem;
+    transition: all 0.6s;
+    color: salmon;
+    font-size: 1em;
+    text-align: center;
+}
+.contador input a {
+    
+    color: green;
+    text-decoration: none;
+    font-size: bold;
+    margin-left: 10px;
+}
+.contador a:hover {
+    color: salmon;
+}
+
+.fechasTodas{
+    margin-bottom: 20px;
+}
+
+.checkOut{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
