--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,7 @@ color: white;
 }
 
 .shoppingTodo{
+    margin-left: 15px;
     display: flex;
     flex-direction: row;
     justify-content: center;
