--- a/src/hojas-de-estilo/Testimonio.css
+++ b/src/hojas-de-estilo/Testimonio.css
@@ -16,8 +16,10 @@
     color: #000;
     margin-bottom: 10px;
 }
+
 .imagen-testimonio {
     width: 340px;
+    max-height: 250px;
 }
 
 .contenedor-texto-testimonio{
@@ -39,13 +41,13 @@
     margin-bottom: 10px;
 }
 
-.cargo-testimonio {
+.incluye-testimonio {
     font-size: 1.3rem;
     margin-top: 15px;
     padding-bottom: 30px;
 }
 
-.texto-testimonio{
+.precio-testimonio{
     font-size: 1.1rem;
     text-align: center;
 }
@@ -116,6 +118,10 @@
     border: 2px solid rgb(120, 9, 224);
     transition: all 0.6s;
 }
+.agregarACarrito:hover{
+    background-color: rgb(120, 9, 224);
+
+}
 .agregarACarrito a{
     text-decoration: none;
     color : rgb(120, 9, 224);
@@ -123,8 +129,10 @@
 
 }
 
-.agregarACarrito:hover{
-    background-color: salmon;
-
+.agregarACarrito a:hover{
+    text-decoration: none;
+    color : salmon;
 }
+
+
 
