--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@ h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .liNav a {
@@ -68,8 +69,8 @@ h2 {
 
 .liNav {
     list-style: none;
-    margin: 1rem;
-    padding: 0.5rem;
+    margin: 1rem 8px 1rem 8px;
+    padding: 0.3rem;
 
     
 }
@@ -127,7 +128,7 @@ color: white;
     align-items: center;
     justify-content: center;
 }
-.tituloYcarrito{
+.tituloElige{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
