--- a/src/hojas-de-estilo/Testimonio.css
+++ b/src/hojas-de-estilo/Testimonio.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     background-color: #fff;
     box-shadow: 0 3px 13px 1px rgba(0 0 0 / 9%); ;
 }
@@ -19,7 +19,7 @@
 
 .imagen-testimonio {
     width: 340px;
-    max-height: 250px;
+    max-height: 226px;
 }
 
 .contenedor-texto-testimonio{
