--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,7 @@ color: white;
     justify-content: space-between;
 }
 .okey{
-    width: 80%;
+/*     width: 100%; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
