--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ header {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 30px;
+
     height: 25px;
     margin-left: 5px;
 /*     border:  8px; */
@@ -93,7 +93,13 @@ header {
     color: black;
     transition: all 0.8s;
     margin-right: 10px;
+    width: 40px;
 }
+.contadorUnidades{
+     padding: 0px 3px; 
+}
+
+
 .liNav a:hover {
     color: white;
     background-color: rgb(120, 9, 224);
@@ -111,10 +117,8 @@ header {
     list-style: none;
     margin: 1rem 8px 1rem 8px;
     padding: 0.3rem;
-
-    
 }
-
+/* va media querie de padding a 0.0 en .liNav */
 .liNav li:hover {
     background-color: rgb(120, 9, 224);
     border-radius: 0.4rem;
