--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@ color: white;
     justify-content: space-between;
 }
 .okey{
-/*     width: 100%; */
+    width: 90%; 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
