--- a/src/App.css
+++ b/src/App.css
@@ -11,26 +11,6 @@ html, body {
     background-color: #f5f6f7;
 }
 
-.NaturAdventure{
-    color: rgb(120, 9, 224);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    letter-spacing: 3px;
-    font-size: 2rem;
-    
-
-
-}
-h2 {
-    max-width: 940px;
-    font-size: 2.5em;
-    font-weight: 700;
-    line-height: 1.1;
-    margin: 40px 0;
-}
-
 .App{
     min-height: 100vh;
     display: flex;
@@ -40,90 +20,6 @@ h2 {
     text-align: center;
 }
 
-header {
-    padding-right: 0px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 4rem;
-/*     padding-right: 0px; */
-    height: 95px;
-    background-color: #f5f6f7;
-
-}
-.header nav ul  {
-    padding-top: 10px ;
-    height: 90px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.shoppingTodo{
-
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    align-items: center;
-    width: 60px;
-
-}
-.contadorUnidades{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    height: 25px;
-    margin-left: 5px;
-/*     border:  8px; */
-    background-color: rgb(120, 9, 224);
-    color: salmon ;
-    border-radius: 5px;
-
-}
-.liNav a {
-    text-decoration: none;
-    color: black;
-    transition: all 0.8s;
-    margin-right: 10px;
-    width: 40px;
-}
-.contadorUnidades{
-     padding: 0px 3px; 
-}
-
-
-.liNav a:hover {
-    color: white;
-    background-color: rgb(120, 9, 224);
-    border-radius: 5px;
-    padding: 6px 8px 6px 8px;
-    
-}
-.ulNav {
-    display: flex;
-        text-decoration: none;
-
-}
-
-.liNav {
-    list-style: none;
-    margin: 1rem 8px 1rem 8px;
-    padding: 0.3rem;
-}
-/* va media querie de padding a 0.0 en .liNav */
-.liNav li:hover {
-    background-color: rgb(120, 9, 224);
-    border-radius: 0.4rem;
-
-}
 
 .hero{background-image: url("https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80");
 background-position: center;
@@ -176,6 +72,8 @@ color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    font-size: 2rem;
+    margin: 40px 0px 30px 0;
 }
 .okey{
     width: 90%; 
