--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,10 @@ color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     font-size: 2rem;
     margin: 40px 0px 30px 0;
+    width: 1000px;
 }
 .okey{
     width: 90%; 
