--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ color: white;
     margin: 40px 0px 30px 0;
     width: 1000px;
 }
-.todasLasCards{
+.todasLasItem{
     width: 90%; 
     display: flex;
     flex-direction: row;
