--- a/src/hojas-de-estilo/Item.css
+++ b/src/hojas-de-estilo/Item.css
@@ -34,7 +34,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+    font-size: 1rem;
     text-align: center;
     padding: 40px;
     font-family: Lato, sans-serif;
