--- a/src/hojas-de-estilo/CartWidget.css
+++ b/src/hojas-de-estilo/CartWidget.css
@@ -12,6 +12,7 @@
 }
 .shoppingTodo:hover{
     transform: scale(1.2);
+    background-color: white;
 }
 .contadorUnidades{
     display: flex;
@@ -28,14 +29,18 @@
     border-radius: 5px;
 
 }
-/* .liNav a {
-    text-decoration: none;
-    color: black;
-    transition: all 0.8s;
-    margin-right: 10px;
-    width: 40px;
-} */
+
 .contadorUnidades{
      padding: 0px 3px; 
 }
 
+
+.shoppingTodo{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+    width: 60px;
+
+}
