--- a/src/hojas-de-estilo/contacto.css
+++ b/src/hojas-de-estilo/contacto.css
@@ -1,8 +1,11 @@
 .contacto-full{
     margin-top: 40px;
     height: 900px;
+    background-color: white;
+    width: 100%;
 }
 .contacto-full-h1{
     letter-spacing: 1.2rem;
     font-size: 3rem;
+    margin-top: 40px;
 }
