--- a/src/hojas-de-estilo/ItemDetail.css
+++ b/src/hojas-de-estilo/ItemDetail.css
@@ -22,10 +22,14 @@
 }
 
 .anyTravel-detail{
+    margin-top: 18px;
+    display: flex ;
+    flex-direction: column;
+    justify-content: end;
     font-size: 1.1rem;
     font-weight: bold;
     color: #000;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .imagen-Item-detail {
@@ -41,6 +45,7 @@
     font-size: 1rem;
     text-align: center;
     padding: 40px;
+    margin-left: 20px;
     font-family: Lato, sans-serif;
     font-weight: 400;
     line-height: 1.1;
