--- a/src/hojas-de-estilo/contacto.css
+++ b/src/hojas-de-estilo/contacto.css
@@ -1,12 +1,21 @@
 .full-form{
     margin-top: 40px;
-    height: 1000px;
+    height: 700px;
     background-color: white;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 h2{
     letter-spacing: 1.1rem;
     font-size: 3rem;
-    margin-top: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
+.formulario{
+    width: 340px;
+    border: 1px solid rgb(120, 9, 224);
+    border-radius: 3px;
+}
