--- a/src/hojas-de-estilo/ItemDetail.css
+++ b/src/hojas-de-estilo/ItemDetail.css
@@ -23,6 +23,7 @@
 
 .anyTravel-detail{
     margin-top: 18px;
+    margin-left: 11px;
     display: flex ;
     flex-direction: column;
     justify-content: end;
