--- a/src/hojas-de-estilo/ItemDetail.css
+++ b/src/hojas-de-estilo/ItemDetail.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: start;
     align-items: start;
+    margin-bottom: 30px;
 
 }
 .contenedor-Item-detail{
