--- a/src/hojas-de-estilo/ItemDetail.css
+++ b/src/hojas-de-estilo/ItemDetail.css
@@ -183,11 +183,15 @@
     justify-content: end;
 
 } */
+
+/* .terminar{
+    display: none;
+}
+ */
 .terminar:hover{
     background-color: rgb(120, 9, 224);
     text-decoration: none;
     color : salmon;
 }
-
 
 
