--- a/src/hojas-de-estilo/contacto.css
+++ b/src/hojas-de-estilo/contacto.css
@@ -1,6 +1,6 @@
 .full-form{
 
-    height: 600px;
+    height: 780px;
     background-color: white;
     width: 100%;
     display: flex;
@@ -18,14 +18,20 @@ h2{
     width: 340px;
     border: 1px solid rgb(120, 9, 224);
     border-radius: 8px;
+    padding-left:20px ;
+
 }
 
 .reglon-de-form{
     font-size: 1.4rem;
     margin: 15px 00px 15px 0px;
+    text-align: left;
 }
 
-
+input{
+    font-size: 1.2rem;
+;
+}
 .enviar {
     cursor: pointer;
     padding: 2px 30px;
