--- a/src/hojas-de-estilo/Cart.css
+++ b/src/hojas-de-estilo/Cart.css
@@ -3,8 +3,24 @@
      padding: 0;
 }
 .cart-full{
-    height: 590px;
+    height: 800px;
 }
-.cart-full-h1{
+.cart-full-h{
+    letter-spacing: 3px;
     margin-top: 40px;
+}
+
+.detalles{
+    letter-spacing: 6px;
+/*     margin-top: 40px; */
+}
+
+.botonera-item-cart{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+}
+.subTotal{
+    margin-left: 20px;
 }
