--- a/src/hojas-de-estilo/ItemDetail.css
+++ b/src/hojas-de-estilo/ItemDetail.css
@@ -10,16 +10,12 @@
     margin-top: 20px;
     width: 900px;
     height: 500px; 
-
     display: flex;
     flex-direction: column;
-/*     align-items: start; */
     justify-content: center;
-    
-    
     flex-flow: wrap;
     background-color: #fff;
-    box-shadow: 0 3px 13px 1px rgba(0 0 0 / 9%); ;
+    box-shadow: 0 3px 13px 1px rgba(0 0 0 / 9%); 
 }
 
 .contenedor-Item-detail-alto{
