--- a/src/hojas-de-estilo/shop.css
+++ b/src/hojas-de-estilo/shop.css
@@ -33,3 +33,18 @@
 	background: rgb(0, 0, 0);
 	background: radial-gradient(circle, rgb(11, 4, 4) 77%, rgb(0, 0, 0) 100%);
 }
+
+
+.agregarACarrito-detail{
+    border: 0;
+    padding: 3px 4px;
+    border-radius: 0.4rem;
+    transition: all 0.6s;
+    font-size: 1.1em;
+    text-align: center;
+    border: 2px solid rgb(120, 9, 224);
+    text-decoration: none;
+    color : rgb(120, 9, 224);
+    font-size: bold;
+    cursor: pointer;
+}
