--- a/src/hojas-de-estilo/NavBar.css
+++ b/src/hojas-de-estilo/NavBar.css
@@ -74,3 +74,48 @@ a:-webkit-any-link {
     text-decoration: none;
 }
 
+/* responsive abajo */
+.menu-btn{
+    position: absolute;
+    cursor: pointer;
+    top: 15px;
+/*      right: 30px;  */
+   z-index: 2;
+   font-size: 1.5rem;
+   padding-left: 12px;
+   padding-right: 12px;
+   padding-bottom: 4px;
+   margin-left: 20px;
+   vertical-align: middle;
+   border-radius: 4px;
+   background-color: rgb(26, 26, 26, 0.9);
+   display: none;
+}
+.menu-btn img{
+    padding-top: 5px;
+    padding-bottom: 1px;
+   vertical-align: middle;
+
+}
+
+@media (max-width: 910px){
+    
+    .cielo .cieloLista{  
+        width: 100%;
+        background-color: rgb(47, 54, 64, 0.6);
+        opacity: 0.9;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding-top: 40px;
+        margin: 0;
+        transform: translateX(-1000px);
+        transition: transform  .5s ease-in-out;
+    }
+    .ulNav.show{  
+        transform: translateX(0px);
+        
+        
+    } }
