--- a/src/hojas-de-estilo/Cart.css
+++ b/src/hojas-de-estilo/Cart.css
@@ -68,7 +68,7 @@
     height: 25px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 
