--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+
 }
 
 code {
@@ -14,4 +17,8 @@ code {
 
 .li_per {
   text-decoration: none;  
+}
+
+body{
+  overflow-x: hidden ;
 }
