--- a/src/hojas-de-estilo/Item.css
+++ b/src/hojas-de-estilo/Item.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     background-color: #fff;
     box-shadow: 0 3px 13px 1px rgba(0 0 0 / 9%); ;
 }
