--- a/src/hojas-de-estilo/ItemCount.css
+++ b/src/hojas-de-estilo/ItemCount.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 120px;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 
 }
