--- a/src/hojas-de-estilo/ItemDetailContainer.css
+++ b/src/hojas-de-estilo/ItemDetailContainer.css
@@ -8,7 +8,7 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     min-height: 800px;
 }
 
