--- a/src/hojas-de-estilo/CartContext.css
+++ b/src/hojas-de-estilo/CartContext.css
@@ -1,4 +1,4 @@
-.cartconteiner {
+/* .cartconteiner {
   display: flex;
   width: 100%;
   justify-content: center;
@@ -83,3 +83,4 @@
   width: 50px;
   text-align: center;
 }
+ */
