--- a/src/hojas-de-estilo/ItemListContainer.css
+++ b/src/hojas-de-estilo/ItemListContainer.css
@@ -3,7 +3,7 @@ h2{
 }
 
 .ItemListContainer-estilo {
-    width: 90%;
+    width: 100vw;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
