--- a/src/hojas-de-estilo/Footer.css
+++ b/src/hojas-de-estilo/Footer.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgb(235, 235, 235);
-  width: 100%;
+  width: 100vw;
 }
 
 .iconostodos { 
