--- a/src/hojas-de-estilo/Cart.css
+++ b/src/hojas-de-estilo/Cart.css
@@ -97,3 +97,41 @@
     margin-top: 40px;
     width: 300px;
 }
+
+
+@media (max-width: 960px){
+    .detalles{
+        font-size: 5vw;
+    }
+    .renderizada-foto{
+        display: none;
+        
+    }
+    .renderizada-card{
+        align-items: center;
+    }
+    .renderizada-card-unidad{
+        width: 70vw;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .full-form-ending{
+        width: 350px;
+    }
+    
+}
+
+@media (max-width: 714px){
+    .renderizada-botonera-item-cart{
+        flex-flow: wrap
+    }
+    .totales-cart{
+        flex-direction: column;
+        align-items: center;
+    }
+    .vaciar-carrito{
+        width: 200px;
+    }
+
+    
+}
