--- a/src/hojas-de-estilo/CartWidget.css
+++ b/src/hojas-de-estilo/CartWidget.css
@@ -8,10 +8,8 @@
     cursor: pointer;
     transform: transition (all 1s);
 }
-.shoppingTodo:hover{
-    transform: scale(1.2);
-    background-color: rgb(235, 235, 235);
-}
+
+
 .contadorUnidades{
     display: flex;
     flex-direction: column;
@@ -35,4 +33,10 @@
     justify-content: right;
     align-items: center;
     width: 60px;
+}
+
+@media (max-width: 960px){
+    .shoppingTodo{
+        align-self: flex-end;
+    }
 }
